@@ -70,7 +70,7 @@ public class CffImporterTest {
     public void testImportEntriesBasic() throws IOException, URISyntaxException {
         Path file = Path.of(CffImporterTest.class.getResource("CffImporterTestValid.cff").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file).getDatabase().getEntries();
-        BibEntry entry = bibEntries.get(0);
+        BibEntry entry = bibEntries.getFirst();
 
         BibEntry expected = getPopulatedEntry().withField(StandardField.AUTHOR, "Joe van Smith");
 
@@ -81,7 +81,7 @@ public class CffImporterTest {
     public void testImportEntriesMultipleAuthors() throws IOException, URISyntaxException {
         Path file = Path.of(CffImporterTest.class.getResource("CffImporterTestValidMultAuthors.cff").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file).getDatabase().getEntries();
-        BibEntry entry = bibEntries.get(0);
+        BibEntry entry = bibEntries.getFirst();
 
         BibEntry expected = getPopulatedEntry();
 
@@ -92,7 +92,7 @@ public class CffImporterTest {
     public void testImportEntriesSwhIdSelect1() throws IOException, URISyntaxException {
         Path file = Path.of(CffImporterTest.class.getResource("CffImporterTestValidSwhIdSelect1.cff").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file).getDatabase().getEntries();
-        BibEntry entry = bibEntries.get(0);
+        BibEntry entry = bibEntries.getFirst();
 
         BibEntry expected = getPopulatedEntry().withField(BiblatexSoftwareField.SWHID, "swh:1:rel:22ece559cc7cc2364edc5e5593d63ae8bd229f9f");
 
@@ -103,7 +103,7 @@ public class CffImporterTest {
     public void testImportEntriesSwhIdSelect2() throws IOException, URISyntaxException {
         Path file = Path.of(CffImporterTest.class.getResource("CffImporterTestValidSwhIdSelect2.cff").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file).getDatabase().getEntries();
-        BibEntry entry = bibEntries.get(0);
+        BibEntry entry = bibEntries.getFirst();
 
         BibEntry expected = getPopulatedEntry().withField(BiblatexSoftwareField.SWHID, "swh:1:cnt:94a9ed024d3859793618152ea559a168bbcbb5e2");
 
@@ -114,7 +114,7 @@ public class CffImporterTest {
     public void testImportEntriesDataset() throws IOException, URISyntaxException {
         Path file = Path.of(CffImporterTest.class.getResource("CffImporterTestDataset.cff").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file).getDatabase().getEntries();
-        BibEntry entry = bibEntries.get(0);
+        BibEntry entry = bibEntries.getFirst();
 
         BibEntry expected = getPopulatedEntry();
         expected.setType(StandardEntryType.Dataset);
@@ -126,7 +126,7 @@ public class CffImporterTest {
     public void testImportEntriesDoiSelect() throws IOException, URISyntaxException {
         Path file = Path.of(CffImporterTest.class.getResource("CffImporterTestDoiSelect.cff").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file).getDatabase().getEntries();
-        BibEntry entry = bibEntries.get(0);
+        BibEntry entry = bibEntries.getFirst();
 
         BibEntry expected = getPopulatedEntry();
 
@@ -137,7 +137,7 @@ public class CffImporterTest {
     public void testImportEntriesUnknownFields() throws IOException, URISyntaxException {
         Path file = Path.of(CffImporterTest.class.getResource("CffImporterTestUnknownFields.cff").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file).getDatabase().getEntries();
-        BibEntry entry = bibEntries.get(0);
+        BibEntry entry = bibEntries.getFirst();
 
         BibEntry expected = getPopulatedEntry().withField(new UnknownField("commit"), "10ad");
 
